--- a/css/index.css
+++ b/css/index.css
@@ -451,8 +451,8 @@ footer {
         color: #ffffff;
         border: none;
         position: absolute;
-        top: 81%;
-        left: 75%;
+        top: 87%;
+        left: 50%;
         padding: 10px 20px;
         border-radius: 10px;
         text-decoration: none!important;
@@ -496,5 +496,32 @@ footer {
         font-style: normal;
         color: #8DB0B2;
         margin-top: 0px;
+    }
+    .contact-btn {
+        background-color: #8DB0B2;
+        font-family: futura-pt, sans-serif;
+        font-weight: 500;
+        font-size: 20px;
+        color: #ffffff;
+        border: none;
+        position: absolute;
+        top: 87%;
+        left: 50%;
+        padding: 10px 20px;
+        border-radius: 10px;
+    }
+    .contact-btn:hover {
+        background-color: #516570;
+        font-family: futura-pt, sans-serif;
+        font-weight: 500;
+        font-size: 20px;
+        color: #ffffff;
+        border: none;
+        position: absolute;
+        top: 87%;
+        left: 55%;
+        padding: 10px 20px;
+        border-radius: 10px;
+        text-decoration: none!important;
     }
 }
