--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@ body {
 .jen-header {
     background-color: #373737;
     position: relative;
+    overflow: hidden;
 }
 .star-circle-main {
     text-align: center;
