--- a/css/case_study.css
+++ b/css/case_study.css
@@ -46,7 +46,7 @@
     margin-bottom: 15px;
 }
 .case-study p {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Roboto Mono', monospace;
     color: #373737;
     font-size: 20px;
     width: 100%;
@@ -54,7 +54,7 @@
 }
 h3 {
     color: #373737;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Roboto Mono', monospace;
     font-size: 20px;
     font-weight: bold;
 }
@@ -88,7 +88,7 @@ h3 a:hover {
     margin-right: 33px;
 }
 .case-study li {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Roboto Mono', monospace;
     color: #373737;
     font-size: 20px;
     width: 100%;
